--- a/html/ejercicio-sass.html
+++ b/html/ejercicio-sass.html
@@ -35,9 +35,7 @@
       <h3>227km Cerca</h3>
     </div>
     <div class="galeria">
-      <h2>Mis Fotos</h2>
-      <div class="galeria__foto-principal"><img src="../images/galeria1.jpg"></div>
-      <div class="galeria__fotos-adicionales"><img src="../images/galeria2.jpg" width="160"><img src="../images/galeria3.jpg"><img src="../images/galeria4.jpg"></div>
+      <h2>Mis Fotos</h2><a class="galeria__foto-principal"><img src="../images/galeria1.jpg"></a><a class="galeria__fotos-uno"><img src="../images/galeria2.jpg" width="160"></a><a class="galeria__fotos-dos"><img src="../images/galeria3.jpg"></a><a class="galeria__fotos-tres"><img src="../images/galeria4.jpg"></a>
     </div>
   </section>
   <aside class="articulos">
